<resources>
    <string name="app_name">Bookstory</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Bookstory exists to provide the community of digital-first readers the tools worthy of this pastime that defines us.</string>
    <string name="title_welcome_page">Welcome to Bookstory!</string>
    <string name="title_signup_page">Join us and get your next journey</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Capture Your Favorite Reading Moments</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="icon_logo">icon logo</string>
    <string name="text_copyright">Made with ❤ by SALMAN FARIZ AULIA</string>
    <string name="logout">Keluar</string>
    <string name="deskripsi">deskripsi\n</string>
    <string name="upload_by">Uploaded by:</string>
    <string name="add">add\n</string>
    <string name="Camera">Camera\n</string>
    <string name="Upload">Upload</string>
    <string name="Gallery">Gallery</string>
    <string name="Desc">Description</string>
    <string name="foto">foto</string>
    <string name="setError">Password tidak boleh kurang dari 8 karakter</string>
    <string name="erorPass">Password cant less than 8 characters</string>
    <string name="erorEmail">Email must contain user@email.com</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="accounts">Accounts</string>
    <string name="user_icon">User Icon</string>
    <string name="share_location">Share Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Tipe Normal</string>
    <string name="satellite_type">Tipe Satelit</string>
    <string name="terrain_type">Tipe Terrain</string>
    <string name="hybrid_type">Tipe Hybrid</string>
    <string name="retry">Coba lagi</string>
</resources>