<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/add_fotostory"
        android:layout_width="386dp"
        android:layout_height="379dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/foto"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintBottom_toTopOf="@+id/add_buttonkamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/add_buttonkamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/navy"
        android:textColor="@color/white"
        android:text="@string/Camera"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="@+id/ed_add_description" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Upload"
        android:backgroundTint="@color/navy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_buttongallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gallery"
        android:backgroundTint="@color/navy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_buttonkamera"
        app:layout_constraintEnd_toStartOf="@+id/add_buttonkamera"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="@+id/ed_add_description"
        app:layout_constraintTop_toTopOf="@+id/add_buttonkamera"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="395dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/add_fotostory"
        app:layout_constraintVertical_bias="0.739"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Desc"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
        app:layout_constraintEnd_toEndOf="@+id/ed_add_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_add_description" />

    <ProgressBar
        android:id="@+id/add_pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="63dp"
        android:layout_height="58dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
